feat: add swagger API
